--- a/app/src/main/res/layout/dialog_scan_layout.xml
+++ b/app/src/main/res/layout/dialog_scan_layout.xml
@@ -405,7 +405,7 @@
 
                     <Space
                         android:layout_width="8dp"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/btnConfirmBooking"
@@ -413,7 +413,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="CONFIRM"
+                        android:text="CONFIRM PAYMENT"
                         android:textColor="@color/white"
                         app:backgroundTint="@color/colorPrimary" />
 
