--- a/app/src/main/res/layout/activity_transport_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_transport_admin_dashboard.xml
@@ -124,7 +124,7 @@
                                 android:layout_height="match_parent"
                                 android:background="@drawable/background_toolbar"
                                 android:orientation="vertical"
-                                android:padding="16dp">
+                                android:padding="8dp">
 
                                 <TextView
                                     android:id="@+id/dashboardBookingsToday"
@@ -161,7 +161,7 @@
                                 android:layout_height="match_parent"
                                 android:background="@drawable/background_toolbar"
                                 android:orientation="vertical"
-                                android:padding="16dp">
+                                android:padding="8dp">
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -247,7 +247,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
-                                android:padding="16dp">
+                                android:padding="8dp">
 
                                 <TextView
                                     android:id="@+id/dashboardBookingsAllTime"
@@ -283,7 +283,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"
-                                android:padding="16dp">
+                                android:padding="8dp">
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -325,7 +325,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="16dp" />
 
-                    <com.google.android.material.card.MaterialCardView
+                    <!--<com.google.android.material.card.MaterialCardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
@@ -405,7 +405,7 @@
                                 android:background="#FFFFFF" />
 
                         </LinearLayout>
-                    </com.google.android.material.card.MaterialCardView>
+                    </com.google.android.material.card.MaterialCardView>-->
 
                 </LinearLayout>
             </LinearLayout>
