--- a/app/src/main/res/layout/activity_user_book.xml
+++ b/app/src/main/res/layout/activity_user_book.xml
@@ -191,7 +191,9 @@
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="false"
                             android:ellipsize="end"
+                            android:focusable="false"
                             android:fontFamily="@font/lato"
                             android:inputType="time"
                             android:maxLines="1"
@@ -254,7 +256,9 @@
                                 <com.google.android.material.textfield.TextInputEditText
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:clickable="false"
                                     android:ellipsize="end"
+                                    android:focusable="false"
                                     android:fontFamily="@font/lato"
                                     android:inputType="number"
                                     android:maxLines="1" />
@@ -316,7 +320,9 @@
                                 <com.google.android.material.textfield.TextInputEditText
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:clickable="false"
                                     android:ellipsize="end"
+                                    android:focusable="false"
                                     android:fontFamily="@font/lato"
                                     android:inputType="number"
                                     android:maxLines="1" />
@@ -378,7 +384,9 @@
                                 <com.google.android.material.textfield.TextInputEditText
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:clickable="false"
                                     android:ellipsize="end"
+                                    android:focusable="false"
                                     android:fontFamily="@font/lato"
                                     android:inputType="number"
                                     android:maxLines="1" />
