--- a/app/src/main/res/layout/booking_admin_pending_item_layout.xml
+++ b/app/src/main/res/layout/booking_admin_pending_item_layout.xml
@@ -8,8 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,9 +28,9 @@
                     android:background="@color/colorAccent"
                     android:orientation="horizontal"
                     android:paddingStart="16dp"
-                    android:paddingTop="8dp"
+                    android:paddingTop="6dp"
                     android:paddingEnd="16dp"
-                    android:paddingBottom="8dp">
+                    android:paddingBottom="6dp">
 
                     <TextView
                         android:id="@+id/itemNumber"
@@ -52,9 +51,9 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:paddingStart="16dp"
-                    android:paddingTop="8dp"
+                    android:paddingTop="6dp"
                     android:paddingEnd="16dp"
-                    android:paddingBottom="8dp">
+                    android:paddingBottom="6dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -85,7 +84,7 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="8dp" />
+                android:layout_height="6dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,7 +133,7 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="8dp" />
+                android:layout_height="6dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -143,7 +142,7 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="8dp" />
+                android:layout_height="6dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -245,7 +244,7 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="8dp" />
+                        android:layout_height="6dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -259,7 +258,7 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="8dp" />
+                        android:layout_height="6dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -369,7 +368,7 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="8dp" />
+                        android:layout_height="6dp" />
 
                     <TextView
                         android:id="@+id/bookingTransportName"
@@ -384,7 +383,7 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="8dp" />
+                        android:layout_height="6dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
